[gd_scene load_steps=2 format=3 uid="uid://cpqctix88ee60"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_i4p46"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i4p46")
action_items = Array[String](["up", "down"])

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
tab_alignment = 1
current_tab = 3

[node name="Game" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Game"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Grid" type="GridContainer" parent="TabContainer/Game/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Mode" type="Label" parent="TabContainer/Game/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mode (CPU/Player2):"

[node name="ModeOptions" type="OptionButton" parent="TabContainer/Game/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="Player" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Player"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Grid" type="GridContainer" parent="TabContainer/Player/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 10
columns = 2

[node name="PlayerPaddle" type="Label" parent="TabContainer/Player/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Player Paddle"

[node name="PlayerPaddleOption" type="OptionButton" parent="TabContainer/Player/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="CPUPaddle" type="Label" parent="TabContainer/Player/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CPU/Player2 Paddle"

[node name="CPUPaddleOption" type="OptionButton" parent="TabContainer/Player/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="Graphics" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="Grid" type="GridContainer" parent="TabContainer/Graphics/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="WindowSize" type="Label" parent="TabContainer/Graphics/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Window Size"

[node name="WindowSizeOption" type="OptionButton" parent="TabContainer/Graphics/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="FullscreenButton2" type="Label" parent="TabContainer/Graphics/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Fullscreen:"

[node name="FullscreenButton" type="CheckButton" parent="TabContainer/Graphics/MarginContainer/Grid"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
action_mode = 0

[node name="Controls" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Controls/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 100
alignment = 1

[node name="InputLabelsContainer" type="VBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="ColLabelControl" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/InputLabelsContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Control:"

[node name="InputButtonsContainer" type="VBoxContainer" parent="TabContainer/Controls/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="ColLabelKey" type="Label" parent="TabContainer/Controls/MarginContainer/HBoxContainer/InputButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Button:"

[node name="Sound" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sound/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Sound" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "123456789"

[node name="Sound1" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "123456789"

[node name="Sound3" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "123456789"

[node name="Sound4" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "123456789"

[node name="Sound5" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "123456789"

[connection signal="item_selected" from="TabContainer/Game/MarginContainer/Grid/ModeOptions" to="." method="_on_window_size_option_item_selected"]
[connection signal="item_selected" from="TabContainer/Player/MarginContainer/Grid/PlayerPaddleOption" to="." method="_on_player_paddle_option_item_selected"]
[connection signal="item_selected" from="TabContainer/Player/MarginContainer/Grid/CPUPaddleOption" to="." method="_on_cpu_paddle_option_item_selected"]
[connection signal="item_selected" from="TabContainer/Graphics/MarginContainer/Grid/WindowSizeOption" to="." method="_on_window_size_option_item_selected"]
[connection signal="toggled" from="TabContainer/Graphics/MarginContainer/Grid/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
